@@ -23,11 +23,11 @@ DIST_SUBDIRS = jack libjack jackd drivers example-clients doc
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = jack.pc
 
+EXTRA_DIST = depcomp COPYING COPYING.GPL COPYING.LGPL
+
+AUTOMAKE_OPTIONS = foreign
+
 rpm: dist
 	rpm -ta $(distdir).tar.gz
 
 dist-hook: dist-check-doxygen
-
-EXTRA_DIST = depcomp COPYING COPYING.GPL COPYING.LGPL
-
-AUTOMAKE_OPTIONS = foreign
