@@ -4,3 +4,4 @@ Makefile
 Makefile.in
 jack_md5.h
 jackd
+jackd.1
